--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>lvmx-express</title>
   <script>
-    window.location.href = './posts/index.html'
+    window.location.href = './post/index.html'
   </script>
 </head>
 
