--- a/public/register.html
+++ b/public/register.html
@@ -11,20 +11,23 @@
 
 <body class="text-center">
 
-  <form class="form-signin">
+  <form class="form-signin" action="javascript:;">
     <img class="mb-4" src="/assets/images/bootstrap-solid.svg" alt="" width="72" height="72" />
 
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" />
+    <label for="inputEmail" class="sr-only">用户名</label>
+    <input type="email" id="inputEmail" class="form-control" placeholder="用户名" required="" autofocus="" /> 
+
+    <label for="inputEmail" class="sr-only">Email</label>
+    <input type="email" id="inputEmail" class="form-control" placeholder="Email" required="" autofocus="" />
 
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" />
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">
-      登入
-    </button>
+      注册
+    </button> 
 
     <p class="mt-5 mb-3 text-muted">© 2019-2020</p>
   </form>
