--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
     <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" />
 
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" />
+    <input  id="inputPassword" class="form-control" placeholder="Password" required="" />
 
     <button class="btn btn-lg btn-primary btn-block" type="submit">
       登入
