--- a/public/login.html
+++ b/public/login.html
@@ -11,18 +11,18 @@
 
 <body class="text-center">
 
-  <form class="form-signin">
+  <form class="form-signin" action="javascript:;">
     <img class="mb-4" src="/assets/images/bootstrap-solid.svg" alt="" width="72" height="72" />
 
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" />
+    <input type="email" id="login-username" class="form-control" placeholder="Email address" required="" autofocus="" />
 
     <label for="inputPassword" class="sr-only">Password</label>
-    <input  id="inputPassword" class="form-control" placeholder="Password" required="" />
+    <input  id="login-password" class="form-control" placeholder="Password" required="" />
 
-    <button class="btn btn-lg btn-primary btn-block" type="submit">
+    <button id="user-login" class="btn btn-lg btn-primary btn-block" type="submit">
       登入
     </button>
 
@@ -31,6 +31,7 @@
 
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="/assets/js/user_login.js"></script>
 </body>
 
 </html>
