完成头像上传

--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
 <body class="text-center">
 
   <form class="form-signin" action="javascript:;">
-    <img class="mb-4" src="/assets/images/bootstrap-solid.svg" alt="" width="72" height="72" />
+    <img class="mb-4" src="/assets/images/kongbai.png" alt="" width="72" height="72" />
 
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
@@ -25,12 +25,15 @@
     <button id="user-login" class="btn btn-lg btn-primary btn-block" type="submit">
       登入
     </button>
+    <button style="margin-top:50px ;"><a href="./register.html">注册</a></button>
 
     <p class="mt-5 mb-3 text-muted">© 2019-2020</p>
   </form>
 
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
+  <script src="/assets/js/common.js"></script>
   <script src="/assets/js/user_login.js"></script>
 </body>
 
