--- a/public/register.html
+++ b/public/register.html
@@ -34,6 +34,8 @@
 
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
   <script src="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
+  <script src="/assets/js/common.js"></script>
   <script src="/assets/js/user_register.js"></script>
 </body>
 
