--- a/public/user/settings/password/edit.html
+++ b/public/user/settings/password/edit.html
@@ -5,9 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>lvmx-express</title>
+  <link rel="shortcut icon" href="/assets/img/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.12.1/css/all.min.css">
-  <link rel="stylesheet" href="/assets/css/main.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.12.1/css/all.min.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 
 <body>
@@ -16,32 +17,28 @@
       <img src="/assets/images/bootstrap-solid.svg" width="30" height="30" class="d-inline-block align-top" alt="" />
       Bootstrap
     </a>
-
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/">帖子列表</a>
         </li>
       </ul>
-
-      <ul  id="navbar-nav-right" class="navbar-nav">
+      <ul  id="navbar-nav-right"  class="navbar-nav">
         <!-- <li class="nav-item">
-          <a href="javascript:;" class="nav-link">
-            <i class="fas fa-plus">发布</i>
+          <a href="/post/create.html" class="nav-link">
+            <i class="fas fa-plus"></i>
           </a>
         </li>
         <li class="nav-item dropdown">
           <a href="javascript:;" class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown">
-            <img src="/assets/images/avatar.jpg" class="rounded" width="30" height="30" alt="" />
+            <img src="/assets/img/avatar.png" class="rounded" width="30" height="30" alt="" />
           </a>
-
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="#">Profile</a>
-            <a class="dropdown-item" href="#">Settings</a>
+            <a class="dropdown-item" href="/user/settings/profile/edit.html">Profile</a>
+            <a class="dropdown-item" href="/user/settings/password/edit.html">Settings</a>
             <div class="dropdown-divider"></div>
             <button class="dropdown-item" type="submit">Logout</button>
           </div>
@@ -51,32 +48,25 @@
   </nav>
 
   <div class="container my-5">
-    <h1 class="mb-5">发表帖子</h1>
-
+    <h1 class="mb-5">更新密码</h1>
     <form action="javascript:;" method="POST">
       <div class="form-group">
-        <label for="title">标题</label>
-        <input id="form-title" type="text" class="form-control" name="title" placeholder="请输入标题" autofocus />
+        <label>旧密码</label>
+        <input type="password" class="form-control" name="old_password" />
       </div>
-
       <div class="form-group">
-        <label for="content">正文</label>
-        <textarea id="form-content" class="form-control" name="content" rows="8" cols="80" placeholder="请输入正文"></textarea>
+        <label>新密码</label>
+        <input type="password" class="form-control" name="new_password" />
       </div>
-
       <div class="form-group d-flex justify-content-end">
         <button class="btn btn-info ml-2" type="reset">重置</button>
-        <button class="btn btn-primary ml-2" type="submit" id="create-post">提交</button>
+        <button class="btn btn-primary ml-2" type="submit">提交</button>
       </div>
     </form>
   </div>
-
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"></script>
-  <!-- <script src="/lib/moment.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
-  <script src="/assets/js/common.js"></script>
-  <script src="/assets/js/post_release.js"></script>
 </body>
-
+<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
+<script src="/assets/js/common.js"></script>
 </html>
