--- a/public/user/settings/password/edit.html
+++ b/public/user/settings/password/edit.html
@@ -49,24 +49,27 @@
 
   <div class="container my-5">
     <h1 class="mb-5">更新密码</h1>
-    <form action="javascript:;" method="POST">
+    <form action="javascript:;" >
       <div class="form-group">
         <label>旧密码</label>
-        <input type="password" class="form-control" name="old_password" />
+        <input id="my-oldpassword" type="password" class="form-control" name="old_password" />
       </div>
       <div class="form-group">
         <label>新密码</label>
-        <input type="password" class="form-control" name="new_password" />
+        <input id="my-newpassword" type="password" class="form-control" name="new_password" />
       </div>
       <div class="form-group d-flex justify-content-end">
         <button class="btn btn-info ml-2" type="reset">重置</button>
-        <button class="btn btn-primary ml-2" type="submit">提交</button>
+        <button id="update-password" class="btn btn-primary ml-2" >提交</button>
       </div>
     </form>
   </div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/moment@2.24.0/moment.min.js"></script>
+
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2.2.1/src/js.cookie.min.js"></script>
 <script src="/assets/js/common.js"></script>
+<script src="/assets/js/user_updatePassword.js"></script>
 </html>
