--- a/public/user/settings/profile/edit.html
+++ b/public/user/settings/profile/edit.html
@@ -35,7 +35,7 @@
 
   <div class="container my-5">
     <h1 class="mb-5">个人档案</h1>
-    <form action="javascript:;" method="POST">
+    <form action="javascript:;">
       <div class="form-group">
         <label>Email</label>
         <input id="myEmail" type="text" class="form-control" name="email" value="admin@qq.com" readonly />
@@ -46,14 +46,14 @@
         <div>
           <div class="my-file">
             <input id="myFile" type="file" />
-            <img id="myImg" src="/assets/images/avatar.png" class="img-thumbnail" width="100" alt="" />
+            <img id="myImg" src="/assets/images/kongbai.png" class="img-thumbnail" width="100" alt="" />
           </div>
         </div>
       </div>
 
       <div class="form-group d-flex justify-content-end">
-        <button class="btn btn-info ml-2" type="reset">Reset</button>
-        <button id="btn-submit" class="btn btn-primary ml-2" type="submit">Submit</button>
+        <button class="btn btn-info ml-2" type="reset">重置</button>
+        <button id="btn-submit" class="btn btn-primary ml-2" >提交</button>
       </div>
     </form>
   </div>
