--- a/public/login.html
+++ b/public/login.html
@@ -16,10 +16,10 @@
 
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
-    <label for="inputEmail" class="sr-only">Email address</label>
+    <label for="inputEmail" class="sr-only">邮箱</label>
     <input type="email" id="login-username" class="form-control" placeholder="Email address" required="" autofocus="" />
 
-    <label for="inputPassword" class="sr-only">Password</label>
+    <label for="inputPassword" class="sr-only">密码</label>
     <input  id="login-password" class="form-control" placeholder="Password" required="" />
 
     <button id="user-login" class="btn btn-lg btn-primary btn-block" type="submit">
