--- a/public/register.html
+++ b/public/register.html
@@ -17,12 +17,12 @@
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
     <label for="inputEmail" class="sr-only">用户昵称</label>
-    <input  id="inputEmail register-name" class="form-control" placeholder="用户昵称" required="" autofocus="" /> 
+    <input  id="register-name" class="form-control" placeholder="用户昵称" required="" autofocus="" /> 
 
-    <label class="sr-only">Email</label>
+    <label class="sr-only">邮箱</label>
     <input type="email" id="register-username" class="form-control" placeholder="Email" />
 
-    <label for="inputPassword" class="sr-only">Password</label>
+    <label for="inputPassword" class="sr-only">密码</label>
     <input  id="register-password" class="form-control" placeholder="Password"/>
 
     <button id="user-register" class="btn btn-lg btn-primary btn-block" type="submit">
