--- a/public/login.html
+++ b/public/login.html
@@ -17,10 +17,10 @@
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
     <label for="inputEmail" class="sr-only">邮箱</label>
-    <input type="email" id="login-username" class="form-control" placeholder="Email address" required="" autofocus="" />
+    <input type="email" id="login-username" class="form-control" placeholder="邮箱" required="" autofocus="" />
 
     <label for="inputPassword" class="sr-only">密码</label>
-    <input  id="login-password" class="form-control" placeholder="Password" required="" />
+    <input  id="login-password" class="form-control" placeholder="密码" required="" />
 
     <button id="user-login" class="btn btn-lg btn-primary btn-block" type="submit">
       登入
