--- a/public/register.html
+++ b/public/register.html
@@ -17,13 +17,13 @@
     <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
 
     <label for="inputEmail" class="sr-only">用户昵称</label>
-    <input  id="register-name" class="form-control" placeholder="用户昵称" required="" autofocus="" /> 
+    <input  id="register-name" class="form-control" placeholder="用户昵称(必填)" required="" autofocus="" /> 
 
     <label class="sr-only">邮箱</label>
-    <input type="email" id="register-username" class="form-control" placeholder="Email" />
+    <input type="email" id="register-username" class="form-control" placeholder="邮箱(必填)" />
 
     <label for="inputPassword" class="sr-only">密码</label>
-    <input  id="register-password" class="form-control" placeholder="Password"/>
+    <input  id="register-password" class="form-control" placeholder="密码(必填)"/>
 
     <button id="user-register" class="btn btn-lg btn-primary btn-block" type="submit">
       注册
