--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>lvmx-express</title>
+  <title>tiezi-express</title>
   <script>
     window.location.href = './post/index.html'
   </script>
